--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="IMG-20250806-WA0029.jpg" alt="Aarohi" class="logo-image">
+                <img src="images/IMG-20250902-WA0047.jpg" alt="Aarohi" class="logo-image">
                 <span>Aarohi</span>
             </div>
             <ul class="nav-menu">
@@ -60,7 +60,7 @@
                 <div class="image-container">
                     <div class="profile-image">
                         <!-- Placeholder for AADI's photo -->
-                        <img src="IMG-20250806-WA0029.jpg" alt="Aarohi Sharma - Reels Editor" class="profile-photo">
+                        <img src="images/IMG-20250806-WA0029.jpg" alt="Aarohi Sharma - Reels Editor" class="profile-photo">
                     </div>
                     <div class="floating-elements">
                         <div class="floating-icon" style="--delay: 0s">
@@ -132,7 +132,7 @@
                 </div>
                 <div class="about-image">
                     <div class="image-frame">
-                        <img src="IMG-20250902-WA0047.jpg" alt="Aarohi Sharma - About Me" class="about-photo">
+                        <img src="images/IMG-20250902-WA0047.jpg" alt="Aarohi Sharma - About Me" class="about-photo">
                     </div>
                 </div>
             </div>
@@ -578,7 +578,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="IMG-20250806-WA0029.jpg" alt="Aarohi" class="logo-image">
+                    <img src="images/IMG-20250902-WA0047.jpg" alt="Aarohi" class="logo-image">
                     <span>Aarohi</span>
                 </div>
                 <p>&copy; 2025 Aarohi Sharma. All rights reserved. Professional Video Editor & Content Creator.</p>
